# learn-c-c-plus

./: README.md  Roadmap.md
c/: README.md
c/01_hello_world/: hello_world.c  main.c
c/02_1_variables_data_types/: 01_variables.c  02_float_double.c  03_types_scope.c  05_constants.c
c/02_2_operators/: main.c
c/02_variables_data_types/: 02_float_double.c  03_types_scope.c  04_math.c
c/03_0_user_input/: 1_main.c  2_cmd_args.c
c/03_user_input/: main.c
c/04_0_conditional_statemenets/: 1_if.c  2_ternary.c  3_switch.c  4_while.c  5_do_while.c  6_break_continue.c  7_guess_game.c  8_for_loop.c  9_nested_loops.c
c/04_1_calculator/: 02_call.c
c/04_calculator/: 01_add.c
c/05_arrays/: 1_main.c  2D_main.c
c/06_functions/: 1_main.c  2_advanced.c  3_call_by_value_reference.c  4_ponters_arrays.c  5_array_params_return.c
c/07_structs/: main.c
c/08_pointers/: 1_pointers.c
c/09_files/: main.c
c/10_other/: main.c
c/11_projects/: README.md
c/11_projects/01_weather_cli/: Makefile  README.md
c/11_projects/01_weather_cli/src/: main.c  weather.c  weather.h
c/11_projects/02_task_manager/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
c/11_projects/02_task_manager/data/: tasks.json
c/11_projects/02_task_manager/include/: storage.h  task.h
c/11_projects/02_task_manager/src/: main.c  storage.c  task.c  task.h
